--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fullcalendar/timegrid": "^6.1.15",
     "@mui/icons-material": "^6.1.2",
     "@mui/material": "^6.1.2",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-router-dom": "^6.26.2"
   }
 }
