--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "https-browserify": "^1.0.0",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.1",
+    "nodemailer": "^6.9.15",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
     "stream-browserify": "^3.0.0",
